--- a/index.html
+++ b/index.html
@@ -1,78 +1,97 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jacqueline Ross: Portfolio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jacqueline Ross: Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg sticky-top navbar-custom">
     <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:#4682B4; font-size:28px;"></i></span>
     </button>
     <!--Changed div class to nav to specify navigation links-->
     <nav class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">About
-              <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
+          <a class="nav-link" href="index.html">About
+            <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
       </ul>
     </nav>
- </nav>
-    
-  <!--Changed div container to main, this is the main part of the webpage-->
- <main class="container"> 
-   <!--changed div class row to section, the about me card is one section within the main page-->
-    <section class="row">
-     
-     <!--changed card class div to an article, this card contains information about me and this cand and does stand alone from other content-->
-        <article class="card" id="about">
-          <section class="container">
-            <!--Header-->
-             <header class="card-header bg-transparent">
-              <section class="row">
-                <div class="col-12">
-                  <h2>About Me</h2>
-                </div>
-              </section>
-            </header>
-            <!--actual writing about me, and section breaks up away from other area? may want to change this tag-->
-            <article class="card-body">
-              <section class="row">
-                <div class="col-12">
-                  <!--About Me Picture-->
-                  <figure class="wrapper">
-                    <img src="./Images/AboutMe.JPG" class="float-left" alt="Jacqueline Ross">
-                  </figure> 
-                 <!--Information-->
-                  <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I lead all aspects of Change Management for the department and deliver essential communications both internally and externally. This communication involves the design of our project websites and the communication that goes out to the customer. These pages get distributed globally and their functionality is essential.</p>                  
-                  <p> I am currently studying Full Stack Web Development through Michigan State University. Be sure to check out my work in the portfolio tab, and see even more by visiting my GitHub page, where I store all of my recent projects. </p>
-               </div>
-             </section>
-             <footer class="card-footer bg-transparent" id="footer">
-              <h6><a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
-             </footer>
-            </article>
-          </section>
-        </article>
-    </section>
- </main>
+  </nav>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <!--Changed div container to main, this is the main part of the webpage-->
+  <main class="container">
+    <!--changed div class row to section, the about me card is one section within the main page-->
+    <section class="row">
+
+      <!--changed card class div to an article, this card contains information about me and this cand and does stand alone from other content-->
+      <article class="card" id="about">
+        <section class="container">
+          <!--Header-->
+          <header class="card-header bg-transparent">
+            <section class="row">
+              <div class="col-12">
+                <h2>About Me</h2>
+              </div>
+            </section>
+          </header>
+          <!--actual writing about me, and section breaks up away from other area? may want to change this tag-->
+          <article class="card-body">
+            <section class="row">
+              <div class="col-12">
+                <!--About Me Picture-->
+                <figure class="wrapper">
+                  <img src="./Images/AboutMe.JPG" class="float-left" alt="Jacqueline Ross">
+                </figure>
+                <!--Information-->
+                <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I lead all
+                  aspects of Change Management for the department and deliver essential communications both internally
+                  and externally. This communication involves the design of our project websites and the communication
+                  that goes out to the customer. These pages get distributed globally and their functionality is
+                  essential.</p>
+                <p> I am currently studying Full Stack Web Development through Michigan State University. Be sure to
+                  check out my work in the portfolio tab, and see even more by visiting my GitHub page, where I store
+                  all of my recent projects. </p>
+              </div>
+            </section>
+
+          </article>
+        </section>
+      </article>
+    </section>
+  </main>
+
+  <!--footer-->
+  <nav class="navbar fixed-bottom navbar-light bg-light">
+    <h6 id="foot"> <a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a
+        href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a
+        href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
+  </nav>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
