added most recent project to portofolio

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     </section>
   </main>
 
-  <!--footer-->
-  <nav class="navbar fixed-bottom navbar-light bg-light">
-    <h6 id="foot"> <a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a
-        href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a
-        href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
-  </nav>
+   <!--footer-->
+   <nav class="navbar fixed-bottom navbar-light bg-light">
+    <span id="footer"> <h6> <a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a
+         href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a
+         href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6> </span>
+   </nav>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
