--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,18 @@
             <section class="container">
               <section class="row">
 
+                <!-- VAX TRACK App -->
+                <div class="col-md-6 col-sm-12">
+                  <figure class="img-wrapper">
+                    <img class="img-responsive" src="./Images/vaxtrack.png" alt="Coming Soon">
+                    <figure class="img-overlay">
+                      <a href="https://vaccine-app-project2.herokuapp.com/" id="btn" class="btn btn-custom btn-md active"
+                        role="button" aria-pressed="true">VAX TRACK</a>
+                      <a href="https://github.com/ross1jk/shots" id="btn" class="btn btn-custom btn-md active"
+                        role="button" aria-pressed="true">Repository</a>
+                    </figure>
+                  </figure>
+                </div>
 
                 <!-- Eat Da Burger App -->
                 <div class="col-md-6 col-sm-12">
@@ -158,12 +170,13 @@
     </section>
   </main>
 
-
   <!--footer-->
   <nav class="navbar fixed-bottom navbar-light bg-light">
-    <h6 id="foot"> <a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a
-        href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a
-        href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
+    <span id="footer">
+      <h6> <a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a
+          href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a
+          href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
+    </span>
   </nav>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
